[package]
name = "rhea"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5.9"
dirs = "4.0.0"
rhai = "1.8.0"
color-eyre = "0.6.2"

[dependencies.serde]
version = "1.0.143"
features = ["derive"]

[dependencies.tokio]
version = "1.20.1"
features = ["fs", "net", "macros", "io-util", "rt-multi-thread"]
